# esp32xMEMS_voicerec

./: CMakeLists.txt  README.md
components/lib/: CMakeLists.txt  Kconfig.projbuild
components/lib/include/: voice_recognition.h  vr_config.h
components/lib/src/audio/: vr_audio.h  vr_audio_capture.c
components/lib/src/core/: vr_core.c  vr_private_core.h
components/lib/src/utils/: vr_low_pass_filter.c  vr_plot_data.c  vr_utils.h
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_0d64bdd394f94228fb40b5ffd3a551bf.html  dir_0d64bdd394f94228fb40b5ffd3a551bf.js  dir_409f97388efe006bc3438b95e9edef48.html  dir_409f97388efe006bc3438b95e9edef48.js  dir_6c3d8a86e3f77dd1aa69b506bd9ee899.html  dir_6c3d8a86e3f77dd1aa69b506bd9ee899.js  dir_d7eb50c60156f2b699c58b6c76075686.html  dir_d7eb50c60156f2b699c58b6c76075686.js  dir_e9a875910d50cffd5c97cc8177ae21cb.html  dir_e9a875910d50cffd5c97cc8177ae21cb.js  dir_f1e676d8da21eccc19ce7d3c8f06d0f9.html  dir_f1e676d8da21eccc19ce7d3c8f06d0f9.js  dir_f726020acfc8a4edc7c01f98bea16cfb.html  dir_f726020acfc8a4edc7c01f98bea16cfb.js  doxygen_crawl.html  files.html  index.html  navtreedata.js  navtreeindex0.js  structvr__audio__config__t.html  structvr__config__t.html  structvr__processing__config__t.html  structvr__recognition__config__t.html  structvr__recognition__result__t.html  structvr__status__t.html  voice__recognition_8h_source.html  vr__audio_8h_source.html  vr__config_8h_source.html  vr__private__core_8h_source.html  vr__types_8h_source.html  vr__utils_8h_source.html
docs/latex/: annotated.tex  files.tex  (+13 more)
main/: main.c
(+5 files in other folders)
